--- a/Q-Bism.html
+++ b/Q-Bism.html
@@ -3,16 +3,16 @@
 <head> <!--metadata stuff-->
     <title>Q-bism!</title> <!--tab name-->
     <link rel="shortcut icon" href="images/qbort.ico"> <!--tab icon-->
-    <link rel="stylesheet" href="styles/qubey.css"> <!--css sheet when i make it-->
+    <link rel="stylesheet" href="styles/qubey.css"> <!--css sheet-->
 </head>
 
 <header> <!--getting organizational ducks in a row rn, not really gonna mess with CSS in this part tbh-->
     <nav> <!--menu bar stuff, different sections-->
-        <a class="link" href="Index.html">Q-Bism</a>
-        <a class="link" href="story.html">History</a>
-        <a class="link" href="art.html">Art</a>
-        <a class="link" href="ppl.html">Figures</a>
-        <a class="link" href="coolawesome.html">Legacy</a>
+        <a class="link" href="Q-Bism.html">Q-Bism</a>
+        <a class="link" href="#story">History</a>
+        <a class="link" href="#art">Art</a>
+        <a class="link" href="#ppl">Figures</a>
+        <a class="link" href="#legacy">Legacy</a>
     </nav>
 </header>
 <body> <!--main body of everything-->
@@ -25,7 +25,7 @@
             <p>Q-Bism is a site where you can learn about the history, art, and legacy of the cubist movement, one of the most important art movements of the early 20th century. Heavily tied to reactions to war and a desire to depict the world objectively and yet in new and innovative ways, Cubism is one of the most well known art movements in modern history, and an integral force that helped shape modern art, abstract and otherwise.</p> <!--literally just regular text-->
         </div>
         <div class="divTidbit">
-            <h2>Origins in the Art World</h2><!--smaller heading-->
+            <h2 id="story">Origins in the Art World</h2><!--smaller heading-->
             <p>While Pablo Picasso spent much of his career tackling other movements and doing other things, one of his most notable achievements in life is helping to pioneer and create the Cubist movement. While being supported by an art dealer known as Daniel-Henry Kahnweiler, Picasso and other artists, such as Georges Braque, would experiment in their art by depicting their subjects as naught but a collection of geometric shapes. The movement would become truly recognized by the year 1911.</p>
         </div>
     </div>
