--- a/Q-Bism.html
+++ b/Q-Bism.html
@@ -17,16 +17,27 @@
 </header>
 <body> <!--main body of everything-->
     <div class="theBody">
-        <div class="mainInfo"><!--good for styling specific parts, also using some inline css stuff here-->
+        <div><!--good for styling specific parts, also using some inline css stuff here-->
             <h1 id="pageTitle">Q-Bism, or, The History of Cubist Art And How I Learned To Love It</h1><!--main heading-->
             <div class="imgDiv">
                 <img src="images/lab2img.jpg" title="Girl With a Mandolin (Fanny Tellier) by Pablo Picasso" alt="Girl With a Mandolin (Fanny Tellier) by Pablo Picasso" width="433" height="599"> <!--example image im using for lab and to remember how html works, also includes dimensions, alt text, and hover text-->
             </div>
-            <p>Q-Bism is a site where you can learn about the history, art, and legacy of the cubist movement, one of the most important art movements of the early 20th century. Heavily tied to reactions to war and a desire to depict the world objectively and yet in new and innovative ways, Cubism is one of the most well known art movements in modern history, and an integral force that helped shape modern art, abstract and otherwise.</p> <!--literally just regular text-->
+            <p id= "siteDescribe">Q-Bism is a site where you can learn about the history, art, and legacy of the cubist movement, one of the most important art movements of the early 20th century. Heavily tied to reactions to war and a desire to depict the world objectively and yet in new and innovative ways, Cubism is one of the most well known art movements in modern history, and an integral force that helped shape modern art, abstract and otherwise.</p> <!--literally just regular text-->
+            <div class="mainInfo">
+                <h2 class="sectionTitle" id="#story">The History of Cubism</h2>
+                <p>The origins of Cubism can be traced back to the early 20th century, in France. While being supported by an art dealer known as Daniel-Henry Kahnweiler, Pablo Picasso, Georges Braque, and other artists would experiment in their art by depicting their subjects as naught but a collection of geometric shapes. One piece that would influence (but not create) the movement was Les Demoiselles d'Avignon. This piece is considered Proto-Cubist, as it shares many similarities to full Cubist art, but does not go all the way in portraying the subject purely using geometric shapes. The movement would become truly recognized by the year 1911.</p>
+            </div>
+        </div>
+        <div class="image">
+            <img src="images/Les_Demoiselles_d'Avignon.jpg" title="Les Demoiselles d'Avignon by Pablo Picasso" alt="Les Demoiselles d'Avignon by Pablo Picasso by Pablo Picasso" width="433" height="599"> <!--example image im using for lab and to remember how html works, also includes dimensions, alt text, and hover text-->
         </div>
         <div class="divTidbit">
-            <h2 id="story">Origins in the Art World</h2><!--smaller heading-->
-            <p>While Pablo Picasso spent much of his career tackling other movements and doing other things, one of his most notable achievements in life is helping to pioneer and create the Cubist movement. While being supported by an art dealer known as Daniel-Henry Kahnweiler, Picasso and other artists, such as Georges Braque, would experiment in their art by depicting their subjects as naught but a collection of geometric shapes. The movement would become truly recognized by the year 1911.</p>
+            <h3>Future Developments</h3><!--smaller heading-->
+            <p>While Pablo Picasso spent much of his career tackling other movements and doing other things, one of his most notable achievements in life is helping to pioneer and create the Cubist movement.</p>
+        </div>
+        <div class="mainInfo">
+            <h2 class="sectionTitle" id="art">What Does It Even Look Like, Anyways?</h2>
+            <p> Here I have chosen some examples of cubist art.</p>
         </div>
     </div>
 </body>
