--- a/Q-Bism.html
+++ b/Q-Bism.html
@@ -38,6 +38,9 @@
         <div class="mainInfo">
             <h2 class="sectionTitle" id="art">What Does It Even Look Like, Anyways?</h2>
             <p> Here I have chosen some examples of cubist art.</p>
+            <img src="images/Pablo_Picasso,_1909-10,_Figure_dans_un_Fauteuil_(Seated_Nude,_Femme_nue_assise),_oil_on_canvas,_92.1_x_73_cm,_Tate_Modern,_London.jpg" title="Figure dans un Fauteuil, Pablo Picasso" alt="Figure dans un Fauteuil, Pablo Picasso" class="image">
+            <img src="images/Albert_Gleizes,_l'Homme_au_Balcon,_1912,_oil_on_canvas,_195.6_x_114.9_cm,_Philadelphia_Museum_of_Art.jpg" class="image" title="L'Homme au Balcon, Albert Gleizes" alt="L'Homme au Balcon, Albert Gleizes">
+            <img src="images/Robert.jpg" class="image" title="Robert Delauney, Simulataneous Windows on the City" alt="Robert Delauney, Simulataneous Windows on the City">
         </div>
     </div>
 </body>
