--- a/Q-Bism.html
+++ b/Q-Bism.html
@@ -42,6 +42,13 @@
             <img src="images/Albert_Gleizes,_l'Homme_au_Balcon,_1912,_oil_on_canvas,_195.6_x_114.9_cm,_Philadelphia_Museum_of_Art.jpg" class="image" title="L'Homme au Balcon, Albert Gleizes" alt="L'Homme au Balcon, Albert Gleizes">
             <img src="images/Robert.jpg" class="image" title="Robert Delauney, Simulataneous Windows on the City" alt="Robert Delauney, Simulataneous Windows on the City">
         </div>
+        <div class="mainInfo">
+            <h2 class="sectionTitle"sectionTitle id="ppl">Who Did It?</h2>
+            <div class="imgDiv">
+                <img src="images/self-portrait-1907.jpg" title="Self-Portrait, Pablo Picasso, 1907" alt="Self-Portrait, Pablo Picasso, 1907" width="433" height="599">
+            </div>
+            <article>AAAAA</article>
+        </div>
     </div>
 </body>
 </html>
