--- a/Q-Bism.html
+++ b/Q-Bism.html
@@ -44,11 +44,30 @@
         </div>
         <div class="mainInfo">
             <h2 class="sectionTitle"sectionTitle id="ppl">Who Did It?</h2>
-            <div class="imgDiv">
+            <div class="image">
                 <img src="images/self-portrait-1907.jpg" title="Self-Portrait, Pablo Picasso, 1907" alt="Self-Portrait, Pablo Picasso, 1907" width="433" height="599">
             </div>
-            <article>AAAAA</article>
+            <div class="image">
+                <img src="images/Georges_Braque,_1908,_photograph_published_in_Gelett_Burgess,_The_Wild_Men_of_Paris,_Architectural_Record,_May_1910.jpg" title="A photo of Georges Braque, circa 1908" alt="A photo of Georges Braque, circa 1908" width="433" height="599">
+            </div>
+            <ul>
+                <li>The most notable player in the origin of the Cubist movement is most definitely Pablo Picasso. He experimented with many styles over the course of his life, but he played a large role in the creation of the cubist movement, and his work with it and in creating it has left a large impact on art, both abstract and not.</li>
+                <li>Another major player in the history and origins of the Cubist movement is Georges Braque. Braque worked closely with Picasso, and while they worked solo, they both created art for the same patron who would influence the creation of the Cubist style.</li>
+            </ul>
+        </div>
+        <div class="mainInfo">
+            <h2 class="sectionTitle" id="legacy">Its Legacy</h2>
+            <article>The legacy of Cubism is very plain to see. Originally, it started in a sense similar to Impressionism, where the truth of the subject would be revealed by illustrating and painting it, not in a way that is photorealistic, but that strikes at the core truth. Impressionism attempted to replicate this truth by replicating the light of the subject, while Cubism broke it down to its base elements of geometric shapes. This would give way to the idea of putting emotions down on the canvas by way of splattering paint, and using even more abstract approaches to illustrating a subject to get across ideas. While not the first style of abstract art, Cubism can definitely be considered one of the first modern examples.</article>
         </div>
     </div>
 </body>
+<footer> <!--want to have a way to navigate from bottom of page as well-->
+    <nav>
+        <a class="link" href="Q-Bism.html">Q-Bism</a>
+        <a class="link" href="#story">History</a>
+        <a class="link" href="#art">Art</a>
+        <a class="link" href="#ppl">Figures</a>
+        <a class="link" href="#legacy">Legacy</a>
+    </nav>
+</footer>
 </html>
